<resources>
    <string name="app_name">Auto Garcon</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerOpen</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="order_history">Order History</string>
    <string name="cart">Cart</string>
    <string name="old_account">Already Have an Account? \nLog in here</string>
    <string name="new_account">"Don't Have an Account? \nSign up here"</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="placeholder_account_name">"Account Name"</string>
    <string name="changepasswd">Change Password</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="current_orders">Current Orders</string>
    <string name="password_requirements1">
    -at least 8 characters</string>
    <string name="password_requirements2">-contain an uppercase and lowercase letter</string>
    <string name="password_requirements3">-contain number</string>
    <string name="change_name">Change Name</string>
    <string name="first_name">First Name</string>
    <string name="username">Username</string>
    <string name="confirm">Confirm</string>
    <string name="adding_item_confirmation_text">Adding this item will remove the other items currently in cart.</string>
    <string name="reOrder">This will replace all other items within the cart currently</string>
    <string name="cart_is_empty">The cart is currently empty. Add items to spend money.</string>
    <string name="no_Orders">You have no recent Orders</string>
    <string name="no_favorites">No favorite restaurants, add restaurants to fill this page.</string>
    <string name="last_name">Last Name</string>
    <string name="order_history_item">"Previous Ordered Item"</string>
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example_preference_login_status</string>
    <string name="pref_user_name">com.example_preference_user_name</string>
    <string name="pref_auth_token">com.example_preference_pref_auth_token</string>
    <string name="qr_code_description">qr_code_description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="Shopping_cart">Shopping Cart</string>
    <string name="quantity">Qty(0)</string>
    <string name="item">Item</string>
    <string name="Remove">Remove</string>
    <string name="privacy">privacy</string>
    <string name="error">Oops! Something went wrong. </string>
    <string name="wifiError">Please connect to the Internet.</string>
    <string name="errorBody">Please enter a short description of what happened</string>
    <string name="errorSubject">Please tell us what your problem relates too</string>
    <string name="submit">Submit</string>
    <string name="out_of_stock_string">Out of stock</string>
    <string name="Customize">Customize</string>
    <string name="change_image">Change Image</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="Help">I need Assistance</string>
    <string name="Bill">Bill please</string>
    <string name="services">Services</string>
    <string name="customization_hint_on_menu">Sauce on the side, no pickels, extra spicy...</string>
    <string name="customization_hint_on_shopping_cart">Sauce on the side, no pickels, extra spicy... \nFor multiple items separate with a semicolon</string>
    <string name="next">Next</string>
    <string name="no_current_orders">You do not have any current orders. Order something!!!</string>
    <string name="choose_account_image">Choose Account Image (optional)</string>

</resources>
