<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:layout_marginStart="30dp"
        android:text="@string/old_password"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="165dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="225dp"
        android:layout_marginStart="30dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:layout_marginStart="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="305dp"
        android:layout_marginStart="30dp"
        android:text="@string/new_password"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="355dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:layout_marginStart="30dp"/>

    <Button
        android:id="@+id/save_password_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="515dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="@drawable/oval_button"
        android:text="@string/save"
        android:textSize="16sp"
        android:textColor="@color/white"/>

</RelativeLayout>