<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/account_main"
    tools:context="auto_garcon.AccountStuff.Account">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="85dp"
            android:layout_marginStart="30dp"
            android:text="@string/first_name"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/first_name_change"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="105dp"
            android:layout_marginStart="25dp"
            android:inputType="textPersonName"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="165dp"
            android:layout_marginStart="30dp"
            android:text="@string/last_name"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/last_name_change"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="185dp"
            android:layout_marginStart="25dp"
            android:inputType="textPersonName"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:layout_marginStart="30dp"
            android:text="@string/email"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/email_change"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="265dp"
            android:layout_marginStart="25dp"
            android:inputType="textPersonName"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/save_acct_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="444dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:background="@drawable/oval_button"
            android:text="@string/save" />

</RelativeLayout>
