<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="end"
    android:id="@+id/order_history_main"
    tools:context="auto_garcon.Cart_OrderHistory.OrderHistory">


    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_gravity="start"
        android:background="@color/white"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/xml_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/nav_header_background" />

                <Button
                    android:id="@+id/home_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="70dp"
                    android:layout_toStartOf="@+id/order_history_button"
                    android:onClick="goHome"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/order_history_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toStartOf="@id/cart_button"
                    android:onClick="goOrderHistory"
                    android:text="@string/order_history"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/cart_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="goShoppingCart"
                    android:text="@string/cart"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </RelativeLayout>

            <Button
                android:id="@+id/button4"
                android:layout_width="411dp"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:text="@string/order_history_item" />

            <Button
                android:id="@+id/button5"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:text="@string/order_history_item" />

            <Button
                android:id="@+id/button6"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:text="@string/order_history_item" />

            <Button
                android:id="@+id/button7"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:text="@string/order_history_item" />

            <Button
                android:id="@+id/button8"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:text="@string/order_history_item" />

            <Button
                android:id="@+id/button9"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="4dp"
                android:text="@string/order_history_item" />

        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>
